--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "echo 'Build...' && tsc && echo 'Start...' && electron src/app.js",
     "watch-css": "node-sass --watch src/css -o src/css",
     "build-css": "node-sass src/css -o src/css",
-    "clean": "rm src/js/*.js && rm src/css/*.css && src/*.js"
+    "clean": "rm src/js/*.js && rm src/css/*.css && rm src/*.js"
   },
   "repository": {
     "type": "git",
@@ -31,11 +31,15 @@
   "devDependencies": {
     "electron-rebuild": "^1.8.2",
     "node-sass": "^4.9.4",
-    "typescript": "^3.1.3"
+    "typescript": "^3.1.3",
+    "@types/better-sqlite3": "^3.1.3",
+    "@types/jsonwebtoken": "^7.2.8",
+    "@types/bcrypt": "^3.0.0"
   },
   "dependencies": {
-    "@types/better-sqlite3": "^3.1.3",
+    "bcrypt": "^3.0.2",
     "better-sqlite3": "^5.0.1",
-    "electron": "^3.0.6"
+    "electron": "^3.0.6",
+    "jsonwebtoken": "^8.3.0"
   }
 }
