--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "app.ts",
   "scripts": {
     "rebuild": "electron-rebuild -f -w better-sqlite3",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npm run clean && npm run build-css && tsc && electron src/app.js --test",
     "start": "echo 'Build...' && tsc && echo 'Start...' && electron src/app.js",
     "watch-css": "node-sass --watch src/css -o src/css",
     "build-css": "node-sass src/css -o src/css",
-    "clean": "rm src/js/*.js && rm src/css/*.css && rm src/*.js"
+    "clean": "rm -f src/js/*.js && rm -f src/css/*.css && rm -f src/*.js"
   },
   "repository": {
     "type": "git",
@@ -29,17 +29,18 @@
   },
   "homepage": "https://github.com/InstantCodee/TypeOS#readme",
   "devDependencies": {
-    "electron-rebuild": "^1.8.2",
-    "node-sass": "^4.9.4",
-    "typescript": "^3.1.3",
+    "@types/bcrypt": "^3.0.0",
     "@types/better-sqlite3": "^3.1.3",
     "@types/jsonwebtoken": "^7.2.8",
-    "@types/bcrypt": "^3.0.0"
+    "electron-rebuild": "^1.8.2",
+    "node-sass": "^4.9.4",
+    "typescript": "^3.1.3"
   },
   "dependencies": {
     "bcrypt": "^3.0.2",
     "better-sqlite3": "^5.0.1",
     "electron": "^3.0.6",
+    "chalk": "^2.4.1",
     "jsonwebtoken": "^8.3.0"
   }
 }
