--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: node_js
 node_js:
   - "node"
+cache: 
+  directories: 
+    - /home/travis/.node_modules
 
 notifications:
   on_success: always
