--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ git:
 install:
   - curl -sL https://deb.nodesource.com/setup_8.x | sudo -E bash -
   - sudo apt-get install -y nodejs
-  - sudo apt install libdbus-1-dev
+  - sudo apt install libdbus-1-3
 
 # Run all tests
 jobs:
