--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: node_js
-distro: yakkety
+distro: bionic
 sudo: required
 node_js:
   - "node"
@@ -18,7 +18,6 @@ git:
 install:
   - curl -sL https://deb.nodesource.com/setup_8.x | sudo -E bash -
   - sudo apt-get install -y nodejs
-  - sudo apt install libdbus-1-3
 
 # Run all tests
 jobs:
