Noticed Electron needs GUI to run, tests running now with Node only.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.ts",
   "scripts": {
     "rebuild": "electron-rebuild -f -w better-sqlite3",
-    "test": "npm install && npm install --save-dev && $(npm bin)/electron-rebuild && npm run clean && npm run build-css && tsc && electron src/app.js --test",
+    "test": "sh tests/init.sh",
     "start": "echo 'Build...' && tsc && echo 'Start...' && electron src/app.js",
     "watch-css": "node-sass --watch src/css -o src/css",
     "build-css": "node-sass src/css -o src/css",
@@ -39,8 +39,8 @@
   "dependencies": {
     "bcrypt": "^3.0.2",
     "better-sqlite3": "^5.0.1",
-    "electron": "^3.0.6",
     "chalk": "^2.4.1",
+    "electron": "^3.0.6",
     "jsonwebtoken": "^8.3.0"
   }
 }
