--- a/package.json
+++ b/package.json
@@ -31,16 +31,16 @@
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
     "@types/better-sqlite3": "^3.1.3",
-    "@types/jsonwebtoken": "^7.2.8",
-    "electron-rebuild": "^1.8.2",
-    "node-sass": "^4.9.4",
-    "typescript": "^3.1.3"
+    "@types/jsonwebtoken": "^7.2.8"    
   },
   "dependencies": {
     "bcrypt": "^3.0.2",
     "better-sqlite3": "^5.0.1",
     "chalk": "^2.4.1",
     "electron": "^3.0.6",
-    "jsonwebtoken": "^8.3.0"
+    "jsonwebtoken": "^8.3.0",
+    "node-sass": "^4.9.4",
+    "typescript": "^3.1.3",
+    "electron-rebuild": "^1.8.2"
   }
 }
